tests/invalid/depth02.h
#include "depth03.h"
